--- a/migration-to-typescript/.prettierrc
+++ b/migration-to-typescript/.prettierrc
@@ -2,6 +2,6 @@
     "trailingComma": "es5",
     "tabWidth": 4,
     "semi": true,
-    "singleQuote": true,
-    "printWidth": 120
+    "singleQuote": false,
+    "printWidth": 100
 }
