--- a/migration-to-typescript/package.json
+++ b/migration-to-typescript/package.json
@@ -17,13 +17,18 @@
     "license": "ISC",
     "homepage": "",
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.30.4",
+        "@typescript-eslint/parser": "^5.30.4",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^5.1.0",
-        "eslint": "^7.27.0",
+        "eslint": "^8.19.0",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.3",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.2.4",
         "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-promise": "^6.0.0",
         "html-webpack-plugin": "^5.2.0",
         "prettier": "2.2.1",
         "style-loader": "^2.0.0",
