--- a/online-store/package.json
+++ b/online-store/package.json
@@ -35,8 +35,6 @@
         "webpack-merge": "^5.7.3"
     },
     "dependencies": {
-        "multirange": "^2.0.0",
-        "nouislider": "^15.6.0",
-        "rn-range-slider": "^2.1.1"
+        "nouislider": "^15.6.0"
     }
 }
