--- a/online-store/package.json
+++ b/online-store/package.json
@@ -7,11 +7,13 @@
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
         "build": "webpack --config ./webpack.config.js --env mode=prod",
         "lint": "eslint . --ext .ts",
-        "test": "jest"
+        "test": "jest -c ./jest.unit.json",
+        "test:coverage": "jest --coverage -c ./jest.unit.json"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/jest": "^28.1.6",
         "@typescript-eslint/eslint-plugin": "^5.30.4",
         "@typescript-eslint/parser": "^5.30.4",
         "clean-webpack-plugin": "^3.0.0",
@@ -29,6 +31,7 @@
         "prettier": "2.2.1",
         "sass-loader": "^13.0.2",
         "style-loader": "^2.0.0",
+        "ts-jest": "^28.0.7",
         "ts-loader": "^9.3.1",
         "typescript": "^4.7.4",
         "webpack": "^5.37.1",
