--- a/migration-to-typescript/tsconfig.json
+++ b/migration-to-typescript/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "module": "ES6",
+        "module": "ES2020",
         "noImplicitAny": false,
         "strict": true,
         "noEmitOnError": false,
-        "allowJs": true
-    },
+        "allowJs": true,
+        "lib": ["ES2020", "DOM"]
+      },
     "include": ["src"]
 }
