--- a/online-store/package.json
+++ b/online-store/package.json
@@ -7,7 +7,7 @@
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
         "build": "webpack --config ./webpack.config.js --env mode=prod",
         "lint": "eslint . --ext .ts",
-        "test": "jest -c ./jest.unit.json",
+        "test": "jest",
         "test:coverage": "jest --coverage -c ./jest.unit.json"
     },
     "author": "",
@@ -28,6 +28,8 @@
         "eslint-plugin-promise": "^6.0.0",
         "html-webpack-plugin": "^5.2.0",
         "jest": "^28.1.3",
+        "jest-environment-jsdom": "^28.1.3",
+        "jsdom": "^20.0.0",
         "prettier": "2.2.1",
         "sass-loader": "^13.0.2",
         "style-loader": "^2.0.0",
