--- a/online-store/tsconfig.json
+++ b/online-store/tsconfig.json
@@ -8,7 +8,8 @@
         "noImplicitAny": false,
         // "baseUrl": "./",
         "noEmitOnError": false,
-        "allowJs": true
+        "allowJs": true,
+        "esModuleInterop": true
         // "checkJs": true,
         // "paths": {
         //     "@/*": ["./*"]
