--- a/async-race/package.json
+++ b/async-race/package.json
@@ -21,6 +21,7 @@
         "@webpack-cli/generators": "^2.5.0",
         "eslint": "^8.20.0",
         "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-plugin-import": "^2.26.0",
         "html-webpack-plugin": "^5.5.0",
         "prettier": "^2.7.1",
