--- a/async-race/package.json
+++ b/async-race/package.json
@@ -19,12 +19,14 @@
         "@typescript-eslint/eslint-plugin": "^5.32.0",
         "@typescript-eslint/parser": "^5.31.0",
         "@webpack-cli/generators": "^2.5.0",
+        "css-loader": "^6.7.1",
         "eslint": "^8.20.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-plugin-import": "^2.26.0",
         "html-webpack-plugin": "^5.5.0",
         "prettier": "^2.7.1",
+        "style-loader": "^3.3.1",
         "ts-loader": "^9.3.1",
         "typescript": "^4.7.4",
         "webpack": "^5.74.0",
